force-app/main/default/objects/Extole_App_Settings__c/Extole_App_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Extole App Settings</label>
</CustomObject>