force-app/main/default/objects/Extole_App_Settings__c/fields/Consecutive_Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Failure_Count__c</fullName>
    <label>Consecutive Failure Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>