force-app/main/default/objects/Extole_App_Settings__c/fields/Contact_Share_Link_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Share_Link_Field__c</fullName>
    <label>Contact Share Link Field</label>
    <type>Text</type>
    <length>255</length>
    <defaultValue>"Extole_Share_Link__c"</defaultValue>
</CustomField>