force-app/main/default/objects/Extole_App_Settings__c/fields/Debug_Logging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Debug_Logging_Enabled__c</fullName>
    <label>Debug Logging Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>