force-app/main/default/objects/Extole_App_Settings__c/fields/Failure_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Failure_Notification_Email__c</fullName>
    <label>Failure Notification Email</label>
    <type>Email</type>
</CustomField>