force-app/main/default/objects/Extole_App_Settings__c/fields/History_Depth__c.field-meta.xml
<CustomField>
    <fullName>History_Depth__c</fullName>
    <label>History Depth</label>
    <description>Maximum number of historical report runs to fetch per runner when building time series data. Default: 30.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>30</defaultValue>
</CustomField>