force-app/main/default/objects/Extole_App_Settings__c/fields/Last_Sync_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Timestamp__c</fullName>
    <label>Last Sync Timestamp</label>
    <type>DateTime</type>
</CustomField>