force-app/main/default/objects/Extole_App_Settings__c/fields/Lead_Share_Link_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Share_Link_Field__c</fullName>
    <label>Lead Share Link Field</label>
    <type>Text</type>
    <length>255</length>
    <defaultValue>"Extole_Share_Link__c"</defaultValue>
</CustomField>