force-app/main/default/objects/Extole_App_Settings__c/fields/List_View_Columns__c.field-meta.xml
<CustomField>
    <fullName>List_View_Columns__c</fullName>
    <label>Lead Attribution Display Columns</label>
    <type>Text</type>
    <length>255</length>
</CustomField>