force-app/main/default/objects/Extole_App_Settings__c/fields/List_View_Field__c.field-meta.xml
<CustomField>
    <fullName>List_View_Field__c</fullName>
    <label>Extole Lead Attribution Field</label>
    <type>Text</type>
    <length>255</length>
</CustomField>