force-app/main/default/objects/Extole_App_Settings__c/fields/List_View_Object__c.field-meta.xml
<CustomField>
    <fullName>List_View_Object__c</fullName>
    <label>Lead Attribution Object</label>
    <type>Text</type>
    <length>50</length>
    <defaultValue>'Contact'</defaultValue>
</CustomField>