force-app/main/default/objects/Extole_App_Settings__c/fields/List_View_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>List_View_Start_Date__c</fullName>
    <label>Lead Attribution Start Date</label>
    <type>Date</type>
</CustomField>