force-app/main/default/objects/Extole_App_Settings__c/fields/List_View_Value__c.field-meta.xml
<CustomField>
    <fullName>List_View_Value__c</fullName>
    <label>Extole Lead Attribution Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>