force-app/main/default/objects/Extole_App_Settings__c/fields/Notify_After_N_Failures__c.field-meta.xml
<CustomField>
    <fullName>Notify_After_N_Failures__c</fullName>
    <label>Notify After N Failures</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>2</defaultValue>
</CustomField>