force-app/main/default/objects/Extole_App_Settings__c/fields/Notify_On_Sync_Failure__c.field-meta.xml
<CustomField>
    <fullName>Notify_On_Sync_Failure__c</fullName>
    <label>Notify on Sync Failure</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>