force-app/main/default/objects/Extole_App_Settings__c/fields/RAF_Lead_Value__c.field-meta.xml
<CustomField>
    <fullName>RAF_Lead_Value__c</fullName>
    <label>RAF Lead Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>