force-app/main/default/objects/Extole_App_Settings__c/fields/RAF_Tracking_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RAF_Tracking_Start_Date__c</fullName>
    <label>RAF Tracking Start Date</label>
    <type>Date</type>
</CustomField>