force-app/main/default/objects/Extole_App_Settings__c/fields/Scheduled_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Job_Id__c</fullName>
    <label>Scheduled Job Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>