force-app/main/default/objects/Extole_App_Settings__c/fields/Show_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Show_Analytics__c</fullName>
    <label>Show Analytics Tab</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>