force-app/main/default/objects/Extole_App_Settings__c/fields/Show_KPI_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Show_KPI_Dashboard__c</fullName>
    <label>Show KPI Dashboard Tab</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>