force-app/main/default/objects/Extole_App_Settings__c/fields/Show_Lead_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Show_Lead_Attribution__c</fullName>
    <label>Show Lead Attribution Tab</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>