force-app/main/default/objects/Extole_App_Settings__c/fields/Show_List_View__c.field-meta.xml
<CustomField>
    <fullName>Show_List_View__c</fullName>
    <label>Show List View Tab</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>