force-app/main/default/objects/Extole_App_Settings__c/fields/Sync_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Sync_Cadence__c</fullName>
    <label>Sync Cadence</label>
    <type>Text</type>
    <length>20</length>
</CustomField>